project/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-backend-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      volumes:
        - name: project-pvolume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-backend
          image: IMAGE_PLACEHOLDER_BACKEND
          volumeMounts:
            - name: project-pvolume
              mountPath: /usr/src/app/files
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 5000
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 5000
