project/manifests/db-ss.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  clusterIP: None
  selector:
    app: postgresapp

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: db-ss
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
