project/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: projectfrontend-svc
spec:
  type: ClusterIP
  selector:
    app: project-frontend
  ports:
  - name: http
    protocol: TCP
    port: 3214
    targetPort: 80
