project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: project-ing
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: projectfrontend-svc
          servicePort: 3214
      - path: /api/
        backend:
          serviceName: projectbackend-svc
          servicePort: 5000
